Map: little fixes

--- a/app/views/map/index.html.erb
+++ b/app/views/map/index.html.erb
@@ -18,7 +18,7 @@
 <div id="map-layers-tooltip" class="c-tooltip -tip-left"></div>
 
 <!-- c-map-menu -->
-<div id="map-menu" class="c-map-menu wrapper" data-turbolinks-permanent></div>
+<div id="map-menu" class="c-map-menu wrapper"></div>
 
 <!-- c-map-filters -->
 <%= render partial: "map-filters" %>
