--- a/app/assets/javascripts/templates/modal.hbs
+++ b/app/assets/javascripts/templates/modal.hbs
@@ -1,7 +1,7 @@
 <div class="modal-container">
   <div class="modal-content">
     <button class="modal-close js-btn-modal-close">
-      <svg><use xlink:href="#icon-close"></use></svg>
+      <svg class="c-svg -normal"><use xlink:href="#icon-close"></use></svg>
     </button>
     <div class="modal-wrapper">{{{content}}}</div>
   </div>
