new investigator form template

--- a/app/assets/javascripts/templates/investigators/form.hbs
+++ b/app/assets/javascripts/templates/investigators/form.hbs
@@ -10,12 +10,19 @@
   </label>
 
   <label for="email">
-    Name of investigator:
-    <input type="text" name="email" placeholder="Email of investigator">
+    Email of investigator:
+    <input type="email" name="email" placeholder="Email of investigator">
   </label>
 
+  <label for="email">
+    Website of investigator:
+    <input type="url" name="website" placeholder="http://example.org/">
+  </label>
 
-  {{{organisationForm}}}
+  <label for="name_org">
+    name of organization:
+    <input type="url" name="name_org" placeholder="http://example.org/">
+  </label>
 
   <button type="submit">Save</button>
 
