--- a/app/assets/javascripts/templates/investigators/form.hbs
+++ b/app/assets/javascripts/templates/investigators/form.hbs
@@ -7,97 +7,100 @@
   <label for="website">
     Name of investigator:
     <input type="text" name="name" placeholder="Name of investigator">
-  <br /></label>
+  </label>
 
   <label for="email">
     Email of investigator:
     <input type="email" name="email" placeholder="Email of investigator">
-  <br /></label>
+  </label>
 
   <label for="email">
     Website of investigator:
     <input type="url" name="website" placeholder="http://example.org/">
-  <br /></label>
+  </label>
 
   <label for="name_org">
     Name of organization:
     <input type="text" name="name_org" placeholder="Name">
-  <br /></label>
+  </label>
 
   <label for="acronym_org">
     Acronym of organization:
     <input type="text" name="acronym_org" placeholder="NM">
-  <br /></label>
+  </label>
 
   <label for="email_org">
     Email of organization:
     <input type="text" name="email_org" placeholder="test@test.com">
-  <br /></label>
+  </label>
 
   <label for="established_org">
     Established:
     <input type="text" name="established_org" placeholder="1956">
-  <br /></label>
+  </label>
 
   <label for="country_org">
     Country of organization:
-    <input type="text" name="country_org" placeholder="1956">
-  <br /></label>
+    <input type="text" name="country_org" placeholder="United States of America">
+  </label>
 
   <label for="city_org">
     City:
-    <input type="text" name="city_org" placeholder="1956">
-  <br /></label>
+    <input type="text" name="city_org" placeholder="Boston">
+  </label>
 
-  <label for="latitude_org">
+  <label for="latitude_org" class="-half">
     LAT:
-    <input type="text" name="latitude_org" placeholder="1956">
-  <br /></label>
+    <input type="text" name="latitude_org" placeholder="00º 00' 00\"">
+  </label>
 
-  <label for="longitude_org">
+  <label for="longitude_org" class="-half">
     LONG:
-    <input type="text" name="longitude_org" placeholder="1956">
-  <br /></label>
+    <input type="text" name="longitude_org" placeholder="00º 00' 00\"">
+  </label>
 
   <label for="line1_org">
     Line 1:
-    <input type="text" name="line1_org" placeholder="1956">
-  <br /></label>
+    <input type="text" name="line1_org" placeholder="Beacon St.">
+  </label>
 
-  <label for="line_2_org">
+  <label for="line_2_org" class="-half">
     Line 2:
-    <input type="text" name="line_2_org" placeholder="1956">
-  <br /></label>
+    <input type="text" name="line_2_org" placeholder="-">
+  </label>
 
-  <label for="line_3_org">
+  <label for="line_3_org" class="-half">
     Line 3:
-    <input type="text" name="line_3_org" placeholder="1956">
-  <br /></label>
+    <input type="text" name="line_3_org" placeholder="-">
+  </label>
 
   <label for="postcode_org">
     Postcode:
-    <input type="text" name="postcode_org" placeholder="1956">
-  <br /></label>
+    <input type="text" name="postcode_org" placeholder="02108">
+  </label>
 
   <label for="primary_org">
     Primary:
-    <input type="text" name="primary_org" placeholder="1956">
-  <br /></label>
+    <input type="text" name="primary_org" placeholder="No">
+  </label>
 
   <label for="state_org">
     State:
-    <input type="text" name="state_org" placeholder="1956">
-  <br /></label>
+    <input type="text" name="state_org" placeholder="Massachusetts">
+  </label>
 
   <label for="statecode_org">
     Statecode:
-    <input type="text" name="statecode_org" placeholder="1956">
-  <br /></label>
+    <input type="text" name="statecode_org" placeholder="MA">
+  </label>
 
   <label for="geonames_city_id_org">
     Geonames:
-    <input type="text" name="geonames_city_id_org" placeholder="1956">
-  <br /></label>
-  <button type="submit">Save</button>
+    <input type="text" name="geonames_city_id_org" placeholder="Boston">
+  </label>
+  <div class="-buttons">
+    <span class="-btn">cancel</span>
+    <button type="submit" class="-btn -add">add</button>
+  </div>
 
 </form>
