--- a/app/assets/javascripts/templates/investigators/form.hbs
+++ b/app/assets/javascripts/templates/investigators/form.hbs
@@ -99,7 +99,7 @@
     <input type="text" name="geonames_city_id_org" placeholder="Boston">
   </label>
   <div class="-buttons">
-    <span class="-btn">cancel</span>
+    <span class="-btn js-btn-modal-close">cancel</span>
     <button type="submit" class="-btn -add">add</button>
   </div>
 
