--- a/app/assets/stylesheets/components/_modal.scss
+++ b/app/assets/stylesheets/components/_modal.scss
@@ -94,6 +94,7 @@
       font-weight: $font-weight-bold;
       text-transform: uppercase;
       font-size: $font-size-x-small;
+      cursor: pointer;
       &.-add {
         color: #fff;
         background-color: #5aade4; 
