append select organization to modal form

--- a/app/assets/javascripts/templates/investigators/form.hbs
+++ b/app/assets/javascripts/templates/investigators/form.hbs
@@ -19,7 +19,7 @@
     <input type="url" name="website" placeholder="http://example.org/">
   </label>
 
-  <div="modalPickOrganization"></div>
+  <div id="modalPickOrganization"></div>
   <div class="modal-module -mm-org">
     <label for="name_org">
       Name of organization:
