--- a/app/assets/stylesheets/components/_modal.scss
+++ b/app/assets/stylesheets/components/_modal.scss
@@ -56,6 +56,9 @@
     .modal-module {
       display: none;
     }
+    .-getrow {
+      display: inline-block;
+    }
     label {
       margin:  10px 0 30px 0;
       padding: 0;
@@ -83,7 +86,7 @@
     }
     .-buttons {
       text-align: center;
-      margin: 20px 0;
+      margin: 70px 0 20px;
     }
     .-btn {
       width: 114px;
