--- a/app/assets/javascripts/templates/investigators/form.hbs
+++ b/app/assets/javascripts/templates/investigators/form.hbs
@@ -55,12 +55,12 @@
   <div class="modal-module -mm-adr">
     <label for="latitude_org" class="-half">
       LAT:
-      <input type="text" name="latitude_org" placeholder="00º 00' 00\"">
+      <input type="text" name="latitude_org" placeholder="00º 00' 00&quot;">
     </label>
 
     <label for="longitude_org" class="-half">
       LONG:
-      <input type="text" name="longitude_org" placeholder="00º 00' 00\"">
+      <input type="text" name="longitude_org" placeholder="00º 00' 00&quot;">
     </label>
 
     <label for="line1_org">
@@ -101,6 +101,11 @@
     <label for="geonames_city_id_org">
       Geonames:
       <input type="text" name="geonames_city_id_org" placeholder="Boston">
+    </label>
+
+    <label for="organization_type_id">
+      Organization type:
+      <input type="text" name="organization_type_id" placeholder="Boston">
     </label>
   </div>
   <div class="-buttons">
