--- a/app/assets/javascripts/templates/investigators/form.hbs
+++ b/app/assets/javascripts/templates/investigators/form.hbs
@@ -41,10 +41,7 @@
       <input type="text" name="established_org" placeholder="1956">
     </label>
 
-    <label for="country_org">
-      Country of organization:
-      <input type="text" name="country_org" placeholder="United States of America">
-    </label>
+    <div id="modalPickCountry"></div>
 
     <label for="city_org">
       City:
