--- a/app/sql_queries/events_map_regions.sql.erb
+++ b/app/sql_queries/events_map_regions.sql.erb
@@ -19,4 +19,7 @@ where 1=1
 <% if @params[:end_date] %>
   and (events.end_date < date(<%= quote @params[:end_date] %>))
 <% end %>
+<% if @params[:user] %>
+  and events.user_id = <%= quote @params[:user] %>
+<% end %>
 group by location_name, centroid, iso
