--- a/app/sql_queries/projects_map_points.sql.erb
+++ b/app/sql_queries/projects_map_points.sql.erb
@@ -50,4 +50,7 @@ from projects
     <% if @params[:end_date] %>
       and (projects.end_date < date(<%= quote @params[:end_date] %>))
     <% end %>
+    <% if @params[:user] %>
+      and projects.user_id = <%= quote @params[:user] %>
+    <% end %>
 group by project, title, location_name, centroid, iso, is_project_lead
