--- a/app/sql_queries/projects_map_regions.sql.erb
+++ b/app/sql_queries/projects_map_regions.sql.erb
@@ -47,4 +47,7 @@ from projects
     <% if @params[:end_date] %>
       and (projects.end_date < date(<%= quote @params[:end_date] %>))
     <% end %>
+    <% if @params[:user] %>
+      and projects.user_id = <%= quote @params[:user] %>
+    <% end %>
 group by location_name, centroid, iso
