Avoid layers to overlap & minor fixes

--- a/app/assets/stylesheets/components/_map-filters.scss
+++ b/app/assets/stylesheets/components/_map-filters.scss
@@ -19,6 +19,11 @@
     display: flex;
     justify-content: center;
   }
+
+  // Temporal instruction
+  & .chosen-container {
+    position: relative;
+  }
 }
 
 #btn-clear-filters {
