--- a/app/assets/stylesheets/layouts/_project_add.scss
+++ b/app/assets/stylesheets/layouts/_project_add.scss
@@ -44,6 +44,8 @@
 	.-m-edited .chosen-single span {
 		color: rgba($color-2,1);
 	}
+
+  // TODO: fix position, doen't fit with every modal
 	.chosen-container {
 		position: absolute;
 	}
