Sets user map with user data

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,5 +30,6 @@
     <%= yield %>
     <%= render "shared/footer" %>
     <%= render "shared/modal" %>
+    <%= render "shared/javascripts" %>
   </body>
 </html>
