--- a/app/assets/javascripts/templates/map-menu.hbs
+++ b/app/assets/javascripts/templates/map-menu.hbs
@@ -10,7 +10,7 @@
 
   <li>
     {{!-- TO-DO: change 1 for the user id --}}
-    <a href="/network/1/{{type}}/new" class="item {{color}}">
+    <a href="/network/{{userId}}/{{type}}/new" class="item {{color}}">
       <svg class="c-svg {{color}}">
         <use xlink:href="#icon-add"></use>
       </svg>
