--- a/app/assets/stylesheets/components/_buttons-group.scss
+++ b/app/assets/stylesheets/components/_buttons-group.scss
@@ -15,54 +15,57 @@
  **/
 
 .c-buttons-group {
+  display: flex;
+  flex-flow: column;
+  align-items: space-between;
+  width: 100%;
+  padding: 0 $wrapper-mobile-padding;
+
+  @media #{$mq-mobile-large} {
+    width: calc(100% / 2);
+    padding: 0 $wrapper-tablet-padding;
+  }
+
+  @media #{$mq-tablet} {
+    width: calc(100% / 3);
+    padding: 0 $wrapper-padding;
+  }
+
+  .row-buttons {
     display: flex;
     flex-flow: column;
-    align-items: space-between;
     width: 100%;
-    padding: 0 $wrapper-mobile-padding;
 
-    @media #{$mq-mobile-large} {
-      width: calc(100% / 2);
-      padding: 0 $wrapper-tablet-padding;
-    }
-
-    @media #{$mq-tablet} {
-      width: calc(100% / 3);
-      padding: 0 $wrapper-padding;
-    }
-
-    .row-buttons {
-      display: flex;
-      flex-flow: column;
-      width: 100%;
-
-      @media screen and (min-width: 980px) {
-        flex-flow: row;
-      }
-    }
-
-    .c-button {
-      width: 100%;
-      margin-bottom: 10px;
-      padding: 10px 30px;
-
-      @media #{$mq-tablet} {
-        padding: 10px 10px;
-      }
-
-      @media screen and (min-width: 980px) {
-        width: calc(100% / 3);
-        margin-left: 5px;
-
-        &:first-child {
-          margin-left: 0;
-        }
-      }
-    }
-
-    .btn-large {
-      width: 100%;
-
-      &.-inverse { color: $color-4; }
+    @media screen and (min-width: 980px) {
+      flex-flow: row;
     }
   }
+
+  .c-button {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    margin-bottom: 10px;
+    padding: 10px 30px;
+    justify-content: center;
+
+    @media #{$mq-tablet} {
+      padding: 10px 10px;
+    }
+
+    @media screen and (min-width: 980px) {
+      width: calc(100% / 3);
+      margin-left: 5px;
+
+      &:first-child {
+        margin-left: 0;
+      }
+    }
+  }
+
+  .btn-large {
+    width: 100%;
+
+    &.-inverse { color: $color-4; }
+  }
+}
