Sort by param set up

--- a/app/views/map/_map-tooltips.html.erb
+++ b/app/views/map/_map-tooltips.html.erb
@@ -31,11 +31,17 @@
 <div id="map-sortby" class="c-tooltip -tip-right">
 	<span class="tooltip-arrow"></span>
 	<ul>
-		<li class="btn-map-sortby -selected" data-sortby="asc">
-		  <p><span></span> Ascendent</p>
+		<li class="btn-map-sortby -selected" data-sortby="created asc">
+		  <p><span></span>Created date Ascendent</p>
 		</li>
-		<li class="btn-map-sortby" data-sortby="desc">
-		  <p><span></span> Descendent</p>
+		<li class="btn-map-sortby" data-sortby="created desc">
+		  <p><span></span>Created date Descendent</p>
 		</li>
+    <li class="btn-map-sortby" data-sortby="title asc">
+      <p><span></span>Title Ascendent</p>
+    </li>
+    <li class="btn-map-sortby" data-sortby="title desc">
+      <p><span></span>Title Descendent</p>
+    </li>
 	</ul>
 </div>
