--- a/app/views/map/_map-tooltips.html.erb
+++ b/app/views/map/_map-tooltips.html.erb
@@ -1,10 +1,10 @@
 <div id="map-layers" class="c-tooltip -tip-left">
 	<span class="tooltip-arrow"></span>
 	<ul>
-		<li class="btn-map-layer -selected" data-layer="none">
+		<li class="btn-map-layer -selected">
 		  <p><span></span> No layer selected</p>
 		</li>
-		<li class="btn-map-layer" data-layer="hdi">
+		<li data-layer="hdi">
 		  <p><span></span> Human Development Index</p>
 		  <!-- <span class="info-icon"></span> -->
 		</li>
@@ -20,8 +20,31 @@
 		  <p><span></span> Prevalence, 1-year adults only, Globocan</p>
 		  <!-- <span class="info-icon"></span> -->
 		</li>
-		<li class="btn-map-layer" data-layer="context">
+		<li data-layer="context">
 		  <p><span></span> Disability-Adjusted Life Year</p>
+      <div id="context-layer" class="c-tooltip -tip-left-top">
+        <span class="tooltip-arrow"></span>
+        <!-- TO-DO: set list dinamically -->
+        <ul>
+          <li class="btn-map-layer" data-layer="context" data-cancer-type="bladder_cancer">Bladder cancer</li>
+          <li class="btn-map-layer" data-layer="context" data-cancer-type="malignant_neoplasms">Malignant Neoplasms</li>
+          <li class="btn-map-layer" data-layer="context" data-cancer-type="mouth_and_oropharynx_cancers">Mouth and oropharynx cancers</li>
+          <li class="btn-map-layer" data-layer="context" data-cancer-type="oesophagus_cancer">Oesophagus cancer</li>
+          <li class="btn-map-layer" data-layer="context" data-cancer-type="stomach_cancer">Stomach cancer</li>
+          <li class="btn-map-layer" data-layer="context" data-cancer-type="colon_and_rectum_cancers">Colon and rectum cancers</li>
+          <li class="btn-map-layer" data-layer="context" data-cancer-type="liver_cancer">Liver cancer</li>
+          <li class="btn-map-layer" data-layer="context" data-cancer-type="pancreas_cancer">Pancreas cancer</li>
+          <li class="btn-map-layer" data-layer="context" data-cancer-type="trachea_bronchus_lung_cancers">Trachea broncus lung cancers</li>
+          <li class="btn-map-layer" data-layer="context" data-cancer-type="melanoma_and_other_skin_cancers">Melanoma and other skin cancers</li>
+          <li class="btn-map-layer" data-layer="context" data-cancer-type="breast_cancer">Breast cancer</li>
+          <li class="btn-map-layer" data-layer="context" data-cancer-type="cervix_uteri_cancer">Cervix uteri cancer</li>
+          <li class="btn-map-layer" data-layer="context" data-cancer-type="corpus_uteri_cancer">Corpus uteri cancer</li>
+          <li class="btn-map-layer" data-layer="context" data-cancer-type="ovary_cancer">Ovary cancer</li>
+          <li class="btn-map-layer" data-layer="context" data-cancer-type="prostate_cancer">Prostate cancer</li>
+          <li class="btn-map-layer" data-layer="context" data-cancer-type="lymphomas_multiple_myeloma">Lymphomas multiple myeloma</li>
+          <li class="btn-map-layer" data-layer="context" data-cancer-type="leukaemia">Leukaemia</li>
+          <li class="btn-map-layer" data-layer="context" data-cancer-type="other_malignant_neoplasms">Other malignant neoplasms</li></ul>
+      </div>
 		  <!-- <span class="info-icon"></span> -->
 		</li>
 	</ul>
