--- a/app/views/map/_map-tooltips.html.erb
+++ b/app/views/map/_map-tooltips.html.erb
@@ -1,12 +1,31 @@
 <div id="map-layers" class="c-tooltip -tip-left">
 	<span class="tooltip-arrow"></span>
-	<ul>
-		<li class="btn-map-layer -selected">
+	<ul class="layers-list">
+		<li class="btn-map-layer -selected" data-layer="null">
 		  <p><span></span> No layer selected</p>
 		</li>
 		<li data-layer="hdi">
 		  <p><span></span> Human Development Index</p>
 		  <!-- <span class="info-icon"></span> -->
+      <div id="hdi-layer" class="c-tooltip -tip-left-top">
+        <span class="tooltip-arrow"></span>
+        <!-- TO-DO: set list dinamically -->
+        <ul>
+          <li class="btn-map-layer" data-layer="hdi" data-date="1980">1980</li>
+          <li class="btn-map-layer" data-layer="hdi" data-date="1980">1980</li>
+          <li class="btn-map-layer" data-layer="hdi" data-date="1990">1990</li>
+          <li class="btn-map-layer" data-layer="hdi" data-date="2000">2000</li>
+          <li class="btn-map-layer" data-layer="hdi" data-date="2005">2005</li>
+          <li class="btn-map-layer" data-layer="hdi" data-date="2006">2006</li>
+          <li class="btn-map-layer" data-layer="hdi" data-date="2007">2007</li>
+          <li class="btn-map-layer" data-layer="hdi" data-date="2008">2008</li>
+          <li class="btn-map-layer" data-layer="hdi" data-date="2009">2009</li>
+          <li class="btn-map-layer" data-layer="hdi" data-date="2010">2010</li>
+          <li class="btn-map-layer" data-layer="hdi" data-date="2011">2011</li>
+          <li class="btn-map-layer" data-layer="hdi" data-date="2012">2012</li>
+          <li class="btn-map-layer" data-layer="hdi" data-date="2013">2013</li>
+        </ul>
+      </div>
 		</li>
 		<li class="btn-map-layer" data-layer="incidence">
 		  <p><span></span> Incidence, ASR all years Globocan</p>
@@ -43,7 +62,8 @@
           <li class="btn-map-layer" data-layer="context" data-cancer-type="prostate_cancer">Prostate cancer</li>
           <li class="btn-map-layer" data-layer="context" data-cancer-type="lymphomas_multiple_myeloma">Lymphomas multiple myeloma</li>
           <li class="btn-map-layer" data-layer="context" data-cancer-type="leukaemia">Leukaemia</li>
-          <li class="btn-map-layer" data-layer="context" data-cancer-type="other_malignant_neoplasms">Other malignant neoplasms</li></ul>
+          <li class="btn-map-layer" data-layer="context" data-cancer-type="other_malignant_neoplasms">Other malignant neoplasms</li>
+        </ul>
       </div>
 		  <!-- <span class="info-icon"></span> -->
 		</li>
