sort by minor change

--- a/app/views/map/_map-tooltips.html.erb
+++ b/app/views/map/_map-tooltips.html.erb
@@ -74,16 +74,16 @@
 <div id="map-sortby" class="c-tooltip -tip-right">
 	<span class="tooltip-arrow"></span>
 	<ul>
-		<li class="btn-map-sortby -selected" data-sortby="created asc">
+		<li class="btn-map-sortby -selected" data-sortby="created_asc">
 		  <p><span></span>Created date Ascendent</p>
 		</li>
-		<li class="btn-map-sortby" data-sortby="created desc">
+		<li class="btn-map-sortby" data-sortby="created_desc">
 		  <p><span></span>Created date Descendent</p>
 		</li>
-    <li class="btn-map-sortby" data-sortby="title asc">
+    <li class="btn-map-sortby" data-sortby="title_asc">
       <p><span></span>Title Ascendent</p>
     </li>
-    <li class="btn-map-sortby" data-sortby="title desc">
+    <li class="btn-map-sortby" data-sortby="title_desc">
       <p><span></span>Title Descendent</p>
     </li>
 	</ul>
