Set links in every field item

--- a/app/assets/stylesheets/components/_projects-fields.scss
+++ b/app/assets/stylesheets/components/_projects-fields.scss
@@ -19,6 +19,12 @@
       & li {
         margin-bottom: 5px;
       }
+
+      & a {
+        color: $color-2;
+
+        &:hover { color: $color-1; }
+      }
     }
   }
 }
