--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -9,6 +9,9 @@
         <div class="viel"></div>
       </div>
     </div>
+
+    <div id="map-tooltip" class="c-map-tooltip"></div>
+
     <div class="intro-info">
       <div class="info">
         <h1 class="c-title -big"><%= @project.title %></h1>
