--- a/app/views/countries/show.html.erb
+++ b/app/views/countries/show.html.erb
@@ -32,11 +32,11 @@
         </div>
       </div>
       <div class="c-buttons-group">
-        <a href="/" class="c-button -inverse -filled btn-large">Follow</a>
+        <a href="#" class="c-button -inverse -filled btn-large">Follow</a>
         <div class="row-buttons">
-          <a href="/" class="c-button -inverse">+ Project</a>
-          <a href="/" class="c-button -inverse">+ Post</a>
-          <a href="/" class="c-button -inverse">+ Event</a>
+          <a href="#" class="c-button -inverse">+ Project</a>
+          <a href="#" class="c-button -inverse">+ Post</a>
+          <a href="#" class="c-button -inverse">+ Event</a>
         </div>
       </div>
       <ul class="c-section-menu wrapper -color-0">
