--- a/app/assets/stylesheets/components/_card-title.scss
+++ b/app/assets/stylesheets/components/_card-title.scss
@@ -22,6 +22,8 @@
   text-transform: uppercase;
   color: rgba($color-2, .5);
 
+  & * { color: rgba($color-2, .5); }
+
   &.-border-1,
   &.-border-2,
   &.-border-3,
@@ -39,11 +41,11 @@
     }
   }
 
-  &.-color-1 { color: $color-1; }
-  &.-color-2 { color: $color-6; }
-  &.-color-3 { color: $color-4; }
-  &.-color-4 { color: $color-3; }
-  &.-color-5 { color: $color-2; }
+  &.-color-1, &.-color-1 * { color: $color-1; }
+  &.-color-2, &.-color-2 * { color: $color-6; }
+  &.-color-3, &.-color-3 * { color: $color-4; }
+  &.-color-4, &.-color-4 * { color: $color-3; }
+  &.-color-5, &.-color-5 * { color: $color-2; }
 
   &.-border-1:after { background-color: $color-1; }
   &.-border-2:after { background-color: $color-6; }
