--- a/app/views/events/_event-info.html.erb
+++ b/app/views/events/_event-info.html.erb
@@ -28,6 +28,20 @@
       </p>
     </div>
 
+    <% if @event.participants %>
+      <div class="project-field">
+        <h4 class="c-title -smaller"><%= t 'participants' %></h4>
+        <ul class="data">
+          <!-- TO-DO: Event form returns participants as string instead of an array og objects -->
+          <% @event.participants && @event.participants.kind_of?(Array) && @event.participants.each do |p| %>
+            <li>
+              <a href="/map?investigators[]=<%= p.id %>"><%= p.name %></a>
+            </li>
+          <% end %>
+        </ul>
+      </div>
+    <% end %>
+
   </div>
 </div>
 
