--- a/app/views/map/_projects.html.erb
+++ b/app/views/map/_projects.html.erb
@@ -34,7 +34,11 @@
   <!-- Project cards -->
   <% @projects.each do |p| %>
     <div class="card -mobile-large-1-2 -tablet-1-3">
-      <h4 class="c-card-title -border-2"><%= p.project_leads.first.try(:name) %></h4>
+      <h4 class="c-card-title -border-2">
+        <a href="/map?investigators[]=<%= p.project_leads.first.try(:id) %>" class="tag">
+          <%= p.project_leads.first.try(:name) %>
+        </a>
+      </h4>
       <%= link_to project_path(p.id), { :class => "link" } do %>
         <h3 class="c-title"><%= p.title %></h3>
       <% end %>
