--- a/app/views/map/index.html.erb
+++ b/app/views/map/index.html.erb
@@ -23,6 +23,9 @@
 <!-- c-map-filters -->
 <%= render partial: "map-filters" %>
 
+<!-- c-map-share -->
+<%= render partial: "map-share" %>
+
 <!-- c-map-tooltips -->
 <%= render partial: "map-tooltips" %>
 
