Share map modal by url or social networks

--- a/app/assets/javascripts/templates/map-share.hbs
+++ b/app/assets/javascripts/templates/map-share.hbs
@@ -3,7 +3,7 @@
   <p>Copy the link below to share it</p>
   <div class="link-box">
     <input id="url" class="url" value="{{link}}" />
-    <button class="c-button btn-copy">Copy</button>
+    <button class="c-button btn-copy -filled">Copy</button>
   </div>
   <div class="copy-alert hide">
     {{!-- <p>Now press &#8984; + C or Ctrl + C to copy</p> --}}
