--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -45,6 +45,10 @@
         &.-notext > a {
           display: block;
           text-indent: -10000px;
+
+          &:hover {
+            opacity: .6;
+          }
         }
 
         &.-linkedin > a {
