--- a/app/views/map/_events.html.erb
+++ b/app/views/map/_events.html.erb
@@ -2,11 +2,13 @@
   <!-- Events cards -->
   <% @events.each do |e| %>
     <div class="card -mobile-large-1-2 -tablet-1-3">
+      <% if e.country? %>
       <h4 class="c-card-title -border-2">
         <a href="/map?type=events&group=countries&countries[]=<%= Country.find_by( country_name: e.country ).id %>">
           <%= e.city %>, <%= e.country %>
         </a>
       </h4>
+      <% end %>
       <%= link_to event_path(e.id), { :class => "link" } do %>
         <h3 class="c-title"><%= e.title %></h3>
       <% end %>
