--- a/app/views/countries/show.html.erb
+++ b/app/views/countries/show.html.erb
@@ -15,15 +15,15 @@
         <div class="c-numbers-grid">
           <div class="number-info">
             <label class="title">Projects</label>
-            <p class="number">18</p>
+            <p class="number"><%= @projectsCount %></p>
           </div>
           <div class="number-info">
             <label class="title">Organizations</label>
-            <p class="number">12</p>
+            <p class="number"> - </p>
           </div>
           <div class="number-info">
             <label class="title">Events</label>
-            <p class="number">12</p>
+            <p class="number"><%= @eventsCount %></p>
           </div>
           <div class="number-info">
             <label class="title">Daly datasets</label>
@@ -65,6 +65,7 @@
   </div> -->
 
   <% if @projects && @projects.size() > 0 %>
+  <div class="c-card-grid" id="content">
   <!-- Project cards -->
   <% @projects.each do |p| %>
     <div class="card -mobile-large-1-2 -tablet-1-3">
@@ -94,6 +95,7 @@
               remote: true,
               data: {magic: true} %>
     </div>
+  </div>
   <% end %>
 <% else %>
   <div class="c-no-items -padding wrapper">
