--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -1,1 +1,12 @@
-<div class="wrapper">About!</div>
+<div class="wrapper">
+	<h1>About</H1>
+	<p>The Global Cancer Project Map (GCPM) is an interactive online tool and public resource for the global cancer community. Its purpose is to help visitors initiate partnerships, make informed decisions, and develop collaborations in cancer control.</p>
+	<p>Examples of what a user can do through the GCPM are:<p>
+	<p>Share cancer-related projects and events with the global oncology community</p>
+	<p>Search for people, projects, and events in a specific country or as related to a specific cancer type</p>
+	<p>Connect with people with similar interests</p>
+	<p>View epidemiological heat maps that show cancer burden by country</p>
+	<p>And more!</p>
+	<p>For more suggestions on how to get started using the GCPM, see the FAQ.</p>
+	<p>If you would like to contribute to the Global Cancer Project Map, or provide feedback to the management team, we can be reached at data@globalonc.org.</p>
+</div>
