--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -11,7 +11,7 @@
         <li><%= link_to (t 'download'), download_user_manual_path, class: "-color-1", download: 'User Manual', data: {turbolinks: false}, title: "User Manual" %></a></li>
         <li><%= link_to (t 'map'), map_path %></a></li>
         <li><%= link_to (t 'countries'), countries_path %></a></li>
-        <li><%= link_to (t 'cancer_types'), cancers_path %></a></li>
+        <!-- <li><%= link_to (t 'cancer_types'), cancers_path %></a></li> -->
         <li><%= link_to (t 'about'), about_path %></a></li>
       </ul>
     </div>
