--- a/app/assets/stylesheets/components/_about.scss
+++ b/app/assets/stylesheets/components/_about.scss
@@ -32,19 +32,19 @@
 		    width: 100%;
 		    margin: 0 0 23px 0;
 			&.-share {
-				background-image: asset-url(abouticon-01.svg);
+				background-image: asset-url(abouticon-01);
 			}
 			&.-search {
-				background-image: asset-url(abouticon-02.svg);
+				background-image: asset-url(abouticon-02);
 			}
 			&.-connect {
-				background-image: asset-url(abouticon-03.svg);
+				background-image: asset-url(abouticon-03);
 			}
 			&.-view {
-				background-image: asset-url(abouticon-04.svg);
+				background-image: asset-url(abouticon-04);
 			}
 			&.-more {
-				background-image: asset-url(abouticon-05.svg);
+				background-image: asset-url(abouticon-05);
 			}
 		}
 	}
