--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -11,6 +11,7 @@
 		<li><span class="icon -view"></span>View epidemiological heat maps that show cancer burden by country</li>
 		<li><span class="icon -more"></span>And more!</li>
 	</ul>
+	<span class="split-about"></span>
 	<p>For more suggestions on how to get started using the GCPM, see the FAQ.</p>
 	<p>If you would like to contribute to the Global Cancer Project Map, or provide feedback to the management team, we can be reached at <a href="mailto:data@globalonc.org">data@globalonc.org</a>.</p>
 </div>
